--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ nav button{
     cursor: pointer;
     position: relative;
 }
-label::after{
+label:after{
     content: '+';
     font-size: 34px;
     position: absolute;
